tests/baselines/reference/usingDeclarationsInForOf.3.errors.txt
usingDeclarationsInForOf.3.ts(1,12): error TS1492: 'using' declarations may not have binding patterns.


==== usingDeclarationsInForOf.3.ts (1 errors) ====
    for (using {} of []) {
               ~~
!!! error TS1492: 'using' declarations may not have binding patterns.
    }
    